miniextendr-macros/tests/ui/typed_list_unknown_mode.rs
use miniextendr_macros::typed_list;

const _SPEC: () = {
    let _ = typed_list!(@strict; alpha);
};

fn main() {}
